--- a/padawan/static/css/padawan.css
+++ b/padawan/static/css/padawan.css
@@ -1,15 +1,23 @@
 /* Shared
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-.button {
+.normal_link {
+  color: darkred;
+  text-decoration: none;
+}
+.normal_link:hover {
+  color: indianred;
+}
+.button{
   border-radius: 10px;
   color: #4f4346;
   border-color: #4f4346;
 }
-.button.button-primary {
+.button.button-primary{
   background-color: #4b6054;
   border-color: #4b6054;
+  color: white;
 }
-.button.button-primary:focus {
+.button.button-primary:focus{
   background-color: #4b6054;
   border-color: white;
   border-style: double;
@@ -26,13 +34,6 @@
 }
 .main-content {
 
-}
-.container a {
-  color: darkred;
-  text-decoration: none;
-}
-.container a:hover {
-  color: indianred;
 }
 label {
   text-align: left;
@@ -66,6 +67,7 @@ table {
   max-width: 400px;
   margin: auto;
 }
+
 /* Hero
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .grogus {
