CSS for small forms

--- a/padawan/templates/account/login.html
+++ b/padawan/templates/account/login.html
@@ -5,7 +5,7 @@
     <div class="section section-heading">
         <h2>Login to PA·DA·WA·N</h2>
 
-        <div class="section generic-form">
+        <div class="section small-form">
             <form action="" method="POST">
                 <input name="email" type="email" placeholder=" Your email address" class="u-full-width"
                        value="{{ email }}" required>
