--- a/padawan/static/css/padawan.css
+++ b/padawan/static/css/padawan.css
@@ -67,6 +67,10 @@ table {
   max-width: 400px;
   margin: auto;
 }
+.section.small-form {
+  max-width: 400px;
+  margin: auto;
+}
 
 /* Hero
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
