--- a/padawan/static/css/padawan.css
+++ b/padawan/static/css/padawan.css
@@ -32,8 +32,16 @@
   min-height: calc(100vh - 83px);
   background: bisque;
 }
-.main-content {
-
+.content-block {
+  border: 1px solid #4f4346;
+  background-color: white;
+  font-family: 'Ubuntu', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;
+  font-size: small;
+  padding: 10px;
+}
+.aditional_info {
+  font-style: italic;
+  font-size: smaller;
 }
 label {
   text-align: left;
@@ -41,6 +49,9 @@ label {
 table {
   display: block;
   overflow-x: auto;
+}
+article {
+  margin-bottom: 50px;
 }
 
 /* Sections
@@ -209,7 +220,6 @@ footer {
     padding: 16rem 0 14rem;
   }
   .section-description {
-    max-width: 60%;
     margin-left: auto;
     margin-right: auto;
   }
