Implement search page (template, service, views and viewmodel)

--- a/padawan/templates/shared/_layout.html
+++ b/padawan/templates/shared/_layout.html
@@ -39,7 +39,10 @@
                 {% else %}
                     <li><a href="/account/login" class="button">Login</a></li>
                 {% endif %}
-                  <li><a href="/about" class="button">About</a></li>
+                    <li>
+                        <a href="/search" class="button">Search</a>
+                    </li>
+                    <li><a href="/about" class="button">About</a></li>
                 </ul>
               </nav>
             </div>
