--- a/padawan/templates/cms/publications_preview.html
+++ b/padawan/templates/cms/publications_preview.html
@@ -17,9 +17,9 @@
         </h4>
         <span class="aditional_info">Last update: {{ p.updated_date | date_type('delta') }}</span>
         <div class="content-block">
-            {{ p.content[:500] | safe }}
+            {{ p.preview[:800] | safe }}
             <br>
-            {% if p.content|length > 500 %}
+            {% if p.preview|length > 800 %}
                 {%  if p.short_url %}
                     <a href="/{{ p.short_url }}" class="normal_link" target="_self"> [Read more...]</a>
                 {% else %}
