New TODOs and change publications content placeholder

--- a/padawan/templates/admin/edit_publication.html
+++ b/padawan/templates/admin/edit_publication.html
@@ -26,8 +26,8 @@
                 <div class="content-block">
                     <textarea class="u-full-width" cols="50" rows="15"
                               id= "contents" name="contents"
-                              title="Contents (HTML) of the publication"
-                              placeholder="Contents (HTML) of this publication">{{ content }}</textarea>
+                              title="Contents (MarkDown) of the publication"
+                              placeholder="Contents (MarkDown) of this publication">{{ content }}</textarea>
                 </div>
                 <div class="row">
                     <div class="six columns">
